updated index page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+	<a href="home.html">Home</a>
+    <a href="aboutus.html">About Us</a>
+    <a href="services.html">Our Services</a>
+    <a href="ourteam.html">Our Team</a>
+    <a href="#">Contact Us</a>
 	
 	<h1>My First Site</h1>
 </head>
