--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 </div>
                         </h1>
 
-                        <p>I was born in the year 2001, and ever since then i grew up always wanting to be this digital and modernized girl but i didn't know how. One thing i always knew is i was born computer literate.I was very young and no machine has ever defeated me i operating.Well, i finished my secondary education and immediately joined campus where i am studying ICT in whole.I am a Proud Woman In Tech. Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
+                        <p>I was born in the year 2001, and ever since then i grew up always wanting to be this digital and modernized girl but i didn't know how. One thing i always knew is i was born computer literate.Well, i finished my secondary education and immediately joined campus where i am studying ICT in whole.I am a Proud Woman In Tech. Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
                         
                         <div class="custom-btn-group mt-4">
                           <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
@@ -110,13 +110,13 @@
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/Welcome.png" class="img-fluid" alt="project image">
+                            <img src="images/project/Home.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/Home.png" class="img-fluid" alt="project image">
+                            <img src="images/project/Welcome.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
@@ -303,7 +303,7 @@
 
                     <div class="col-lg-12 col-12">                                
                         <p class="copyright-text text-center">Copyright &copy; 2023 Marylyn Shyle . All rights reserved</p>
-                        <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/Shyle Lynn">Shyle Lynn</a></p>
+                        <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/Shyle Lynn">Shyle</a></p>
                     </div>
                     
                </div>
