--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p>I was born in the year 2001, and ever since then i grew up always wanting to be this digital and modernized girl but i didn't know how. One thing i always knew is i was born computer literate.Well, i finished my secondary education and immediately joined campus where i am studying ICT in whole.I am a Proud Woman In Tech. Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+<!--                           <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a> -->
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
                         </div>
                     </div>
@@ -132,11 +132,11 @@
                           </div>
                         </div>
 
-                        <div class="item">
+                        <!-- <div class="item">
                           <div class="project-info">
                             <img src="images/project/4.png" class="img-fluid" alt="project image">
                           </div>
-                        </div>
+                        </div> -->
                       </div>
 
                   </div>
